--- a/slides/2022-11-chess-x-culture.html
+++ b/slides/2022-11-chess-x-culture.html
@@ -196,18 +196,18 @@
 
 						<ul>
 						<span class="fragment"><li>theoretical preparation</li></span>
-						<span class="fragment"><li>calculations</li></span>
+						<span class="fragment"><li><a href="https://www.youtube.com/watch?v=mUzCLtrfeSg">calculations</a></li></span>
 						<span class="fragment"><li><a href="https://www.youtube.com/watch?v=1zkWaPNF7P4">psychology</a></li></span>
 						<span class="fragment"><li>intuition</li></span>
 						<span class="fragment"><li>the <b>meta</b></li></span>
 						</ul>
-						<!-- strategy trent, contemporary, affected by past, present -->
+						<!-- strategy trend, contemporary, affected by past, present -->
 					</section>
 
 					<section>
 						<p>The meta(strategy) is determined by </p>
 						<ul>
-							<span class="fragment"><li>Engine-based analysis</li></span>
+							<span class="fragment"><li>Chess engines</li></span>
 							<span class="fragment"><li>Novelty</li></span>
 						    <span class="fragment"><li>Use by superstar players</li></span>
 							<span class="fragment"><li>Social circle/upbringing</li></span>
@@ -562,7 +562,7 @@
 				</section>
 
 				<section>
-					<section><h2>A call for ideas and suggestions</h2></section>
+					<section><h2>Ideas? Comments?</h2></section>
 				</section>
 
 				<section>
