--- a/slides/2022-11-chess-x-culture.html
+++ b/slides/2022-11-chess-x-culture.html
@@ -288,7 +288,7 @@
 					</section>
 
 					<section>
-						<h4>Overall narrative</h4>
+						<h4>Overall narrative that we will see</h4>
 
 						<ul>
 							<span class="fragment">
@@ -298,10 +298,10 @@
 								<li>It is changing extremely fast despite nearly 2000 years of history</li>
 							</span>
 							<span class="fragment">
-								<li>Chess computers  <em>theory</em> developments </li>
+								<li>Bulk (?) of this is due to <em>theory</em> developments </li>
 							</span>
 							<span class="fragment">
-								<li>Many cultural processes in parallel with <em>theory</em></li>
+								<li>Many cultural processes in parallel with <em>theory</em> (below)</li>
 							</span>
 						</ul>
 					</section>
